# reqwest = { version = "0.11.18", features = ["json", "blocking"] }
# tokio = { version = "1.28.2", features = ["full"] }
# thiserror = "1.0.40"
# anyhow = "1.0"
[workspace]
members = [
    "crates/nomi-core",
    "crates/client",
    ]
resolver = "2"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size. 3 - for speed
lto = true
codegen-units = 1
panic = "abort"

[workspace.dependencies]
log = "0.4.19"
tokio = { version = "1.28.2", features = ["rt", "macros", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = {version = "0.3"}
