# reqwest = { version = "0.11.18", features = ["json", "blocking"] }
# tokio = { version = "1.28.2", features = ["full"] }
# thiserror = "1.0.40"
# anyhow = "1.0"
[workspace]
members = [
    "crates/nomi-core",
    "crates/client",
    "crates/nomi-modding",
    ]
resolver = "2"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size. 3 - for speed
lto = true
codegen-units = 1
panic = "abort"

[workspace.dependencies]
async-trait = "0.1.73"
tokio = { version = "1.28.2", features = ["rt", "macros", "process"] }

itertools = "0.13.0"
typed-builder = "0.18.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_path_to_error = "0.1"
serde_json = "1.0"
toml = "0.8.0"

anyhow = "1.0"
thiserror = "1.0.48"

reqwest = { version = "0.12.5", features = ["json", "blocking", "stream"] }

tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}