[package]
name = "nomi-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

reqwest = { version = "0.11.18", features = ["json", "blocking", "stream"] }
futures-util = "0.3.28"
thiserror = "1.0.48"
toml = "0.8.0"
owo-colors = "3.5.0"
fern = { version = "0.6.2", features = ["date-based"] }
chrono = "0.4.30"
zip = "0.6.6"
sha256 = "1.4.0"
async-trait = "0.1.73"
itertools = "0.11.0"
