[package]
name = "nomi"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.11.18", features = ["json", "blocking"] }
tokio = { version = "1.28.2", features = ["full"] }
thiserror = "1.0.40"
anyhow = "1.0"
uuid = { version = "1.3.3", features= ["v4"] }
zip-extract = "0.1.2"
sha256 = "1.1.4"

urlencoding = "2.1.2"
async-trait = "0.1.71"
log = "0.4"
fern = {version = "0.6.2", features = ["date-based"] }
chrono = "0.4.26"
modrinth = "0.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
