[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

nomi_core = { path = "../nomi_core"}

dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
