[package]
name = "client"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/Umatriz/nomi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

nomi-core = { path = "../nomi-core"}

eframe = "0.27.2"
pollster = "0.3.0"
toml = "0.8.0"
rfd = "0.14.1"
tracing-appender = "0.2.2"
egui_tracing = "0.2.2"