[package]
name = "client"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/Umatriz/nomi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true

nomi-core = { path = "../nomi-core"}

eframe = "0.28.0"
egui_dock = "0.13.0"
egui_form = { version = "0.2.0", features = ["validator_garde"] }
egui-file-dialog = "0.6.0"
# egui version was incompatible so I forked it and bumped it.
egui_tracing = { git = "https://github.com/Umatriz/egui_tracing", branch = "bump_egui"}
egui_task_manager = { git = "https://github.com/Umatriz/egui-task-manager" }
egui_extras = "0.28.0"
garde = { version = "0.18.0", features = ["derive", "regex"] }

pollster = "0.3.0"
tracing-appender = "0.2.2"
once_cell = "1.19.0"
