[package]
name = "client"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/Umatriz/nomi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
itertools.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true

nomi-core = { path = "../nomi-core" }
nomi-modding = { path = "../nomi-modding" }

eframe = "0.28.0"
egui_dock = "0.13.0"
egui_form = { version = "0.2.0", features = ["validator_garde"] }
egui-file-dialog = "0.6.0"
# egui version was incompatible so I forked it and bumped it.
egui_tracing = { git = "https://github.com/Umatriz/egui_tracing" }
egui_task_manager = { git = "https://github.com/Umatriz/egui-task-manager" }
egui_extras = { version = "0.28.0", features = ["all_loaders", "svg"] }
egui_infinite_scroll = { version = "0.4.0", features = ["tokio"] }
egui_commonmark = "0.17"
garde = { version = "0.18.0", features = ["derive", "regex"] }
image = { version = "0.25", default-features = false, features = ["webp"] }

pollster = "0.3.0"
tracing-appender = "0.2.2"
once_cell = "1.19.0"
