[package]
name = "downloads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json", "blocking", "stream"] }
tokio = { workspace = true }
anyhow = "1.0"
log = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.40"
sha256 = "1.2.2"
zip = "0.6.6"
futures-util = "0.3.28"
# uuid = { version = "1.3.3", features= ["v4"] }
# zip-extract = "0.1.2"
# sha256 = "1.1.4"

# urlencoding = "2.1.2"
# async-trait = "0.1.71"
# log = "0.4"
# fern = {version = "0.6.2", features = ["date-based"] }
# chrono = "0.4.26"
# modrinth = "0.2.0"