[package]
name = "nomi-core"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Umatriz/nomi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

egui_task_manager = { git = "https://github.com/Umatriz/egui-task-manager" }

reqwest = { version = "0.11.18", default-features = false, features = ["json", "blocking", "stream", "rustls-tls"] }
futures-util = "0.3.28"
thiserror = "1.0.48"
toml = "0.8.0"
zip = "2.1.2"
tar = "0.4.40"
sha256 = "1.4.0"
async-trait = "0.1.73"
itertools = "0.13.0"
urlencoding = "2.1.3"
const_typed_builder = "0.3.0"
regex = "1.10.1"
uuid = {version = "1.5.0", features = ["v4"]}
flate2 = "1.0.30"
