[package]
name = "nomi-core"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Umatriz/nomi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
reqwest.workspace = true
thiserror.workspace = true

egui_task_manager = { git = "https://github.com/Umatriz/egui-task-manager" }

futures-util = "0.3.28"
zip = "2.1.2"
tar = "0.4.40"
sha256 = "1.4.0"
itertools = "0.13.0"
urlencoding = "2.1.3"
const_typed_builder = "0.3.0"
regex = "1.10.1"
uuid = {version = "1.5.0", features = ["v4"]}
flate2 = "1.0.30"
