[package]
name = "nomi-core"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/Umatriz/nomi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
reqwest.workspace = true
thiserror.workspace = true
typed-builder.workspace = true

itertools.workspace = true

egui_task_manager = { git = "https://github.com/Umatriz/egui-task-manager" }

futures-util = "0.3.28"
zip = "2.1.2"
tar = "0.4.40"
sha256 = "1.4.0"
urlencoding = "2.1.3"
regex = "1.10.1"
uuid = {version = "1.5.0", features = ["v4"]}
flate2 = "1.0.30"
sha1 = "0.10.6"
base16ct = { version = "0.2.0", features = ["std"] }

[lints.rust]
rust_2018_idioms = "deny"