[package]
name = "nomi-modding"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest.workspace = true
thiserror.workspace = true
typed-builder.workspace = true
itertools.workspace = true

nomi-core = { path = "../nomi-core"}