[package]
name = "nomi-modding"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
reqwest.workspace = true
typed-builder.workspace = true
itertools.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
anyhow.workspace = true